# server.js
@@ -15,27 +15,35 @@ const ReportController = require('./Controller/ReportController');
 
 dotenv.config({ path: './config/.env' });
 
-const { MY_PORT} = process.env;
+const { MY_PORT, NODE_ENV,API_KEY} = process.env;
 
-
-dotenv.config()
 var app = express();
 
 const limiter = rateLimit({
   windowMs: 15 * 60 * 1000, 
-  max: 100, 
+  max: 10000, 
 });
+function authenticateApiKey(req, res, next) {
+  const apiKey = req.headers['api-key'];
+  if (!apiKey || apiKey !== API_KEY) {
+      return res.status(401).json({ message: 'Invalid API key' });
+  }
+  next();
+}
 
 app.use(limiter);
 app.use(helmet())
 app.disable('x-powered-by')
-  
+
 app.use(cors())
-app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
+if(NODE_ENV === 'development'){
+  app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
+}
+
 app.use(express.json())
 
-app.use('/market', MarketController);
-app.use('/report', ReportController);
+app.use('/market', authenticateApiKey,MarketController);
+app.use('/report', authenticateApiKey,ReportController);
 
 app.listen(MY_PORT, () =>{
   console.log("Started application on port %d", MY_PORT);
