# swagger.yaml
@@ -7,6 +7,14 @@ info:
 servers:
   - url: http://localhost:5000
     description: Optional server description, e.g. Main (production) server
+components:
+  securitySchemes:
+    ApiKeyAuth:     
+      type: apiKey
+      in: header     
+      name: api-key
+security:
+  - ApiKeyAuth: []  
 
 paths:
   /report/all:
@@ -44,6 +52,8 @@ paths:
     get:
       summary: Returns Market.
       description: Optional extended description in CommonMark or HTML.
+      security:
+        - ApiKeyAuth: []  
       responses:
         '200':  
           description: A JSON array of user names
